// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The header is rendered with the correct breadcrumb links  When a basepath is not passed through 1`] = `
<div
  className="container"
  style={
    Object {
      "backgroundColor": "#000",
      "border": "none",
      "borderRadius": "0",
      "height": "60px",
      "marginBottom": "0",
      "padding": "1.142rem",
      "width": "100%",
    }
  }
>
  <nav
    style={Object {}}
  >
    <ol
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "height": "100%",
          "listStyle": "none",
          "padding": "0",
        }
      }
    >
      <li>
        <span
          aria-hidden={true}
          style={
            Object {
              "color": "#ebebeb",
              "margin": "0 0.28rem",
            }
          }
        >
          /
        </span>
        <a
          href="/folder"
          style={
            Object {
              "color": "lightblue",
              "fontSize": "2rem",
              "textAlign": "left",
            }
          }
        >
          folder
        </a>
      </li>
      <li>
        <span
          aria-hidden={true}
          style={
            Object {
              "color": "#ebebeb",
              "margin": "0 0.28rem",
            }
          }
        >
          /
        </span>
        <a
          href="/folder/nestedFolder"
          style={
            Object {
              "color": "lightblue",
              "fontSize": "2rem",
              "textAlign": "left",
            }
          }
        >
          nestedFolder
        </a>
      </li>
    </ol>
  </nav>
</div>
`;

exports[`The header is rendered with the correct breadcrumb links  When a basepath is passed through 1`] = `
<div
  className="container"
  style={
    Object {
      "backgroundColor": "#000",
      "border": "none",
      "borderRadius": "0",
      "height": "60px",
      "marginBottom": "0",
      "padding": "1.142rem",
      "width": "100%",
    }
  }
>
  <nav
    style={Object {}}
  >
    <ol
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "height": "100%",
          "listStyle": "none",
          "padding": "0",
        }
      }
    >
      <li>
        <span
          aria-hidden={true}
          style={
            Object {
              "color": "#ebebeb",
              "margin": "0 0.28rem",
            }
          }
        >
          /
        </span>
        <a
          href="/morty-docs"
          style={
            Object {
              "color": "lightblue",
              "fontSize": "2rem",
              "textAlign": "left",
            }
          }
        >
          morty-docs
        </a>
      </li>
      <li>
        <span
          aria-hidden={true}
          style={
            Object {
              "color": "#ebebeb",
              "margin": "0 0.28rem",
            }
          }
        >
          /
        </span>
        <a
          href="/morty-docs/some-repo"
          style={
            Object {
              "color": "lightblue",
              "fontSize": "2rem",
              "textAlign": "left",
            }
          }
        >
          some-repo
        </a>
      </li>
      <li>
        <span
          aria-hidden={true}
          style={
            Object {
              "color": "#ebebeb",
              "margin": "0 0.28rem",
            }
          }
        >
          /
        </span>
        <a
          href="/morty-docs/some-repo/folder"
          style={
            Object {
              "color": "lightblue",
              "fontSize": "2rem",
              "textAlign": "left",
            }
          }
        >
          folder
        </a>
      </li>
      <li>
        <span
          aria-hidden={true}
          style={
            Object {
              "color": "#ebebeb",
              "margin": "0 0.28rem",
            }
          }
        >
          /
        </span>
        <a
          href="/morty-docs/some-repo/folder/nestedFolder"
          style={
            Object {
              "color": "lightblue",
              "fontSize": "2rem",
              "textAlign": "left",
            }
          }
        >
          nestedFolder
        </a>
      </li>
    </ol>
  </nav>
</div>
`;
